--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,12 @@
   z-index: 1;
 }
 
+.navbar-toggler {
+  border: none !important;
+  padding: 0px !important;
+  color: none !important;
+}
+
 .container__menu--items {
   display: flex;
   padding: 10px 20px;
@@ -332,7 +338,7 @@
 
 .container-cursos {
   width: 100%;
-  height: "";
+  height: auto;
   display: flex;
   gap: 0px;
   padding: 85px 60px;
@@ -349,17 +355,22 @@
   font-weight: 600;
   line-height: normal;
   margin: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .container-cursos p {
   font-family: "Poppins";
   font-size: 20px !important;
-  color: #343434 !important;
+  color: #7e7d7d !important;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
   margin: 0px;
-  margin: 0px;
+  margin-bottom: 30px;
+}
+.container-cursos .swiper {
+  width: 100%;
+  min-height: 380px;
+  max-height: 600px;
 }
 
 .cursosSwiper {
@@ -367,16 +378,12 @@
   overflow: hidden;
 }
 
-.swiper {
-  padding: 10px !important;
-}
-
 .swiper-pagination-bullet {
   background: rgba(20, 1, 17, 0.5333333333) !important;
   opacity: 0.5;
   width: 18px !important;
   height: 18px !important;
-  margin: 0 6px !important;
+  margin: 6px !important;
 }
 
 .swiper-pagination-bullet-active {
@@ -384,7 +391,7 @@
   opacity: 1;
   width: 18px !important;
   height: 18px !important;
-  margin: 0 6px !important;
+  margin: 6px !important;
 }
 
 .swiper-slide {
@@ -394,9 +401,10 @@
 }
 
 .swiper-wrapper {
-  display: flex;
+  display: flex !important;
   padding-bottom: 50px !important;
   gap: 10px;
+  align-items: center;
 }
 
 .card-curso {
@@ -427,7 +435,7 @@
 .card-curso p {
   font-family: "Poppins";
   font-size: 13px !important;
-  color: #343434 !important;
+  color: #7e7d7d !important;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
@@ -521,7 +529,7 @@
 .container__invitaciones--text p {
   font-family: "Poppins";
   font-size: 20px !important;
-  color: #343434 !important;
+  color: #7e7d7d !important;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
@@ -529,7 +537,7 @@
 }
 
 .container__invitaciones--img {
-  max-width: 50%;
+  width: 100%;
   height: auto;
 }
 
@@ -595,6 +603,10 @@
   margin-bottom: 20px;
   text-align: center;
 }
+.container__libros .swiper {
+  width: 75%;
+  max-height: 680px;
+}
 
 .container__libros--compra--cards {
   width: 100%;
@@ -630,10 +642,11 @@
   padding: 40px 60px;
   display: flex;
   flex-direction: column !important;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   max-width: 350px;
   border-radius: 30px;
+  flex-wrap: wrap;
 }
 .container__libros--card h3 {
   font-family: "Poppins";
@@ -645,7 +658,7 @@
   margin: 0px;
 }
 .container__libros--card img {
-  width: 100%;
+  width: 99%;
   height: auto;
   border-radius: 20px;
   align-self: stretch;
@@ -670,32 +683,19 @@
   color: #FFFAF7 !important;
 }
 
-.swiper-slide {
-  flex-shrink: 0;
-  width: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: auto;
-}
-
-.librosDescargaSwiper {
-  width: 90%;
-  min-height: 350px;
-}
 .librosDescargaSwiper .swiper-pagination-bullet {
   background: #FFFAF7 !important;
   opacity: 0.5;
   width: 18px !important;
   height: 18px !important;
-  margin: 0 6px !important;
+  margin: 6px !important;
 }
 .librosDescargaSwiper .swiper-pagination-bullet-active {
   background: #AC0000 !important;
   opacity: 1;
   width: 18px !important;
   height: 18px !important;
-  margin: 0 6px !important;
+  margin: 6px !important;
 }
 
 .container__videos {
@@ -708,6 +708,10 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+}
+.container__videos .swiper {
+  width: 100%;
+  max-height: 380px;
 }
 
 .container__videos--contenido {
@@ -739,7 +743,7 @@
 .container__videos--text p {
   font-family: "Poppins";
   font-size: 20px !important;
-  color: #343434 !important;
+  color: #7e7d7d !important;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
@@ -765,7 +769,7 @@
 }
 .container__videos--principal iframe {
   width: 100%;
-  height: 400px;
+  height: 380px;
   border-radius: 11.164px;
 }
 
@@ -789,12 +793,15 @@
 }
 
 .videosSwiper {
+  margin: 20px;
   width: 100%;
+  overflow: hidden;
+  padding: 20px;
 }
 
 .container__videos--card {
-  width: 460px !important;
-  height: 310px !important;
+  width: 460px;
+  height: 310px;
   display: flex;
   gap: 0px;
   padding: 20px;
@@ -819,7 +826,7 @@
 }
 .container__videos--card iframe {
   width: 100%;
-  height: 220px !important;
+  height: 240px;
   border-radius: 10px;
   align-self: stretch;
 }
@@ -848,7 +855,7 @@
   align-items: flex-start;
   font-family: "Poppins";
   font-size: 20px !important;
-  color: #343434 !important;
+  color: #7e7d7d !important;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
@@ -968,6 +975,25 @@ textarea.form-control {
 .btn-submit {
   width: 120px !important;
   height: auto !important;
+  background-color: #D1D1D1 !important;
+  color: #1E1E1E !important;
+  font-size: 20px !important;
+  border-radius: 50px !important;
+  border: none !important;
+  cursor: pointer !important;
+  padding: 5px 30px !important;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.btn-submit:hover {
+  background-color: #D1D1D1 !important;
+  color: #1E1E1E !important;
+}
+
+.btn-active {
+  width: 120px !important;
+  height: auto !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
   font-size: 20px !important;
@@ -979,7 +1005,7 @@ textarea.form-control {
   align-items: center;
   gap: 10px;
 }
-.btn-submit:hover {
+.btn-active:hover {
   background-color: #620000 !important;
   color: #FFFAF7 !important;
 }
@@ -1107,7 +1133,7 @@ textarea.form-control {
   position: absolute;
   top: 110%;
   left: 0;
-  background: #343434;
+  background: #7e7d7d;
   border-radius: 20px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
   padding: 10px 0;
@@ -1256,6 +1282,8 @@ html {
     align-items: center;
     justify-content: flex-end;
     padding: 35% 30px 80px 30px !important;
+    text-align: center;
+    align-items: center;
   }
 }
 @media (min-width: 414px) and (max-width: 599.98px) {
@@ -1266,6 +1294,8 @@ html {
     align-items: center;
     justify-content: flex-end;
     padding: 35% 30px 80px 30px !important;
+    text-align: center;
+    align-items: center;
   }
 }
 @media (min-width: 600px) and (max-width: 884.98px) {
@@ -1276,6 +1306,14 @@ html {
     align-items: center;
     justify-content: flex-end;
     padding: 20% 40px 80px 40px !important;
+    text-align: center;
+    align-items: center;
+  }
+}
+@media (min-width: 600px) and (max-width: 884.98px) and (min-width: 885px) and (max-width: 991.98px) {
+  .container__home {
+    text-align: center;
+    align-items: center;
   }
 }
 
@@ -1285,6 +1323,7 @@ html {
     width: 100%;
     padding: 10px !important;
     height: auto;
+    align-items: center;
   }
 }
 @media (min-width: 375px) and (max-width: 884.98px) {
@@ -1292,6 +1331,12 @@ html {
     width: 100%;
     padding-top: 80px;
     height: auto;
+    align-items: center;
+  }
+}
+@media (min-width: 885px) and (max-width: 991.98px) {
+  .container__home--text {
+    align-items: center;
   }
 }
 @media (min-width: 320px) and (max-width: 374.98px) {
@@ -1456,15 +1501,20 @@ html {
 }
 @media (min-width: 885px) and (max-width: 991.98px) {
   .container-servicios--card h3 {
-    font-size: 40px !important;
+    font-size: 27px !important;
   }
 }
 @media (min-width: 320px) and (max-width: 374.98px) {
   .container-servicios--card p {
-    font-size: 15px !important;
+    font-size: 13px !important;
   }
 }
 @media (min-width: 375px) and (max-width: 374.98px) {
+  .container-servicios--card p {
+    font-size: 18px !important;
+  }
+}
+@media (min-width: 885px) and (max-width: 991.98px) {
   .container-servicios--card p {
     font-size: 18px !important;
   }
@@ -1474,7 +1524,7 @@ html {
     width: 100%;
     order: 2;
     align-self: center;
-    margin: 20px 0;
+    padding: 5px;
   }
 }
 
@@ -1539,13 +1589,40 @@ html {
   }
 }
 
+@media (min-width: 320px) and (max-width: 374.98px) {
+  .card-curso {
+    width: 190px;
+    height: 445px;
+  }
+}
+@media (min-width: 375px) and (max-width: 413.98px) {
+  .card-curso {
+    width: 280px;
+    height: 545px;
+  }
+}
 @media (min-width: 885px) and (max-width: 991.98px) {
   .card-curso h3 {
     font-size: 28px;
   }
 }
 @media (min-width: 320px) and (max-width: 374.98px) {
+  .card-curso h3 {
+    font-size: 15px !important;
+  }
+}
+@media (min-width: 375px) and (max-width: 413.98px) {
+  .card-curso h3 {
+    font-size: 15px !important;
+  }
+}
+@media (min-width: 320px) and (max-width: 374.98px) {
   .card-curso p {
+    font-size: 12px !important;
+  }
+}
+@media (min-width: 320px) and (max-width: 374.98px) {
+  .btn-curso {
     font-size: 15px !important;
   }
 }
@@ -1619,6 +1696,11 @@ html {
     padding: 20% 30px 10px 30px !important;
   }
 }
+@media (min-width: 320px) and (max-width: 991.98px) {
+  .container__libros .swiper {
+    width: 100% !important;
+  }
+}
 @media (min-width: 320px) and (max-width: 374.98px) {
   .container__libros h2 {
     font-size: 28px !important;
@@ -1649,6 +1731,12 @@ html {
     font-size: 38px !important;
   }
 }
+@media (min-width: 320px) and (max-width: 374.98px) {
+  .container__libros .swiper-wrapper {
+    width: 85% !important;
+  }
+}
+
 @media (min-width: 320px) and (max-width: 1199.98px) {
   .container__libros--compra--cards {
     flex-direction: column !important;
@@ -1658,6 +1746,8 @@ html {
 @media (min-width: 320px) and (max-width: 413.98px) {
   .container__libros--card {
     padding: 0px !important;
+    width: 230px;
+    height: 530px;
   }
 }
 @media (min-width: 414px) and (max-width: 884.98px) {
@@ -1723,13 +1813,43 @@ html {
 
 @media (min-width: 320px) and (max-width: 599.98px) {
   .container__videos--principal {
-    padding: 40px 22px;
+    padding: 0px;
+  }
+}
+@media (min-width: 320px) and (max-width: 374.98px) {
+  .container__videos--principal iframe {
+    height: 144px;
+  }
+}
+@media (min-width: 375px) and (max-width: 413.98px) {
+  .container__videos--principal iframe {
+    height: 182px;
+  }
+}
+@media (min-width: 414px) and (max-width: 599.98px) {
+  .container__videos--principal iframe {
+    height: 286px;
   }
 }
 @media (min-width: 320px) and (max-width: 991.98px) {
   .btn-videos {
     width: 100% !important;
     margin-top: 40px;
+  }
+}
+@media (min-width: 320px) and (max-width: 374.98px) {
+  .container__videos--card {
+    width: 180px;
+  }
+}
+@media (min-width: 375px) and (max-width: 413.98px) {
+  .container__videos--card {
+    width: 280px;
+  }
+}
+@media (min-width: 414px) and (max-width: 599.98px) {
+  .container__videos--card {
+    width: 300px;
   }
 }
 @media (min-width: 320px) and (max-width: 991.98px) {
