--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,7 +10,8 @@ $colorButtonHover:#FFF;
 $colorButtonHoverOpcional:#620000;
 $colorTextB: #FFFAF7;
 $colorTextN: #1E1E1E;
-$colorTextNAlternativo: #343434;
+$colorTextNAlternativo: #7e7d7d;
+$colorInabilitado: #D1D1D1;
 
 $breakpoints: (
   "none": 0px, 
