--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -80,8 +80,8 @@ main{
     align-items: center;
     justify-content: flex-end;
     padding: 35% 30px 80px 30px !important;
-    text-align: center;
-    align-items: center;
+
+    gap: 40px !important;
   }
   @include respond-between("phone-large", "tablet-small") {
     flex-direction: column;
@@ -90,8 +90,9 @@ main{
     align-items: center;
     justify-content: flex-end;
     padding: 35% 30px 80px 30px !important;
-    text-align: center;
-    align-items: center;
+
+    gap: 40px !important;
+
   }
   @include respond-between("tablet-small", "tablet-medium") {
     flex-direction: column;
@@ -100,11 +101,13 @@ main{
     align-items: center;
     justify-content: flex-end;
     padding: 20% 40px 80px 40px !important;
-    text-align: center;
-    align-items: center;
+
+    gap: 40px !important;
+
     @include respond-between("tablet-medium", "tablet-large") {
-        text-align: center;
-        align-items: center;
+
+    gap: 40px !important;
+
     }
   }
 }
@@ -114,24 +117,32 @@ main{
         width: 100%;
         padding: 10px !important;
         height: auto;
-        align-items: center
+        padding-left: 0px;
     }
   @include respond-between("phone-medium", "tablet-medium") {
     width: 100%;
     padding-top: 80px;
     height: auto;
-    align-items: center
+    padding-left: 0px;
   }
    @include respond-between("tablet-medium", "tablet-large") {
-        align-items: center
+
     }
-  @include respond-between("tablet-medium", "tablet-large") {}
+
   @include respond-between("tablet-large", "laptop-small") {}
   h1 {
-    @include respond-between("phone-small", "phone-medium") {}
-    @include respond-between("phone-medium", "phone-large") {}
-    @include respond-between("phone-large", "tablet-small") {}
-    @include respond-between("tablet-small", "tablet-medium") {}
+    @include respond-between("phone-small", "phone-medium") {
+        font-size: 28px !important;
+    }
+    @include respond-between("phone-medium", "phone-large") {
+         font-size: 28px !important;
+    }
+    @include respond-between("phone-large", "tablet-small") {
+        font-size: 33px !important;
+    }
+    @include respond-between("tablet-small", "tablet-medium") {
+         font-size: 55px !important;
+    }
     @include respond-between("tablet-medium", "tablet-large") {}
     @include respond-between("tablet-large", "laptop-small") {}
   }
