--- a/css/styles.css
+++ b/css/styles.css
@@ -1915,6 +1915,11 @@ html {
     flex-direction: column;
   }
 }
+@media (min-width: 320px) and (max-width: 991.98px) {
+  .btn-submit {
+    width: 100% !important;
+  }
+}
 @media (min-width: 320px) and (max-width: 599.98px) {
   .container__footer p {
     font-size: 11px !important;
