--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,7 +18,9 @@ $breakpoints: (
   "phone-small": 320px,       // iPhone SE, teléfonos más pequeños
   "phone-medium": 375px,      // iPhone X, teléfonos promedio
   "phone-large": 414px,       // iPhone 11 Pro Max, teléfonos grandes
+  "tablet-481":  482px,
   "tablet-small": 600px,      // tabletas pequeñas, dispositivos plegables
+  "tablet-683": 683px,     // iPad mini, tabletas en modo vertical
   "tablet-medium": 885px,     // iPad estándar, tabletas en modo vertical
   "tablet-large": 992px,      // iPad Pro, tabletas grandes en modo horizontal
   "laptop-small": 1200px,     // laptops pequeñas
