--- a/css/styles.css
+++ b/css/styles.css
@@ -1395,10 +1395,17 @@ html {
   }
 }
 
-@media (min-width: 320px) and (max-width: 884.98px) {
+@media (min-width: 320px) and (max-width: 374.98px) {
   .container__home--img {
     position: static;
-    width: 70% !important;
+    width: 100% !important;
+    order: 1;
+  }
+}
+@media (min-width: 375px) and (max-width: 884.98px) {
+  .container__home--img {
+    position: static;
+    width: 80% !important;
     order: 1;
   }
 }
