--- a/css/styles.css
+++ b/css/styles.css
@@ -1402,7 +1402,14 @@ html {
     order: 1;
   }
 }
-@media (min-width: 375px) and (max-width: 884.98px) {
+@media (min-width: 375px) and (max-width: 413.98px) {
+  .container__home--img {
+    position: static;
+    width: 90% !important;
+    order: 1;
+  }
+}
+@media (min-width: 414px) and (max-width: 884.98px) {
   .container__home--img {
     position: static;
     width: 80% !important;
